fix: card image overflow

--- a/src/components/CardWord/CardWord.pcss
+++ b/src/components/CardWord/CardWord.pcss
@@ -3,12 +3,11 @@
 } */
 
 .cardWords {
-  @apply w-full flex my-4 pr-4 rounded-2xl shadow-lg bg-white
+  @apply w-full flex my-4 pr-4 rounded-2xl shadow-lg bg-white overflow-hidden
   sm:flex-col sm:text-center sm:items-center sm:align-middle sm:pr-0 sm:rounded-b-none;
 
   & .imgInCard {
-    @apply w-64 h-64 bg-cover bg-center rounded-l-2xl my-auto
-    sm:rounded-t-2xl sm:rounded-bl-none sm:w-full;
+    @apply w-64 h-64 bg-cover bg-center my-auto  sm:w-full;
   }
   & .imgInCardAutorisate {
     @apply w-64 h-72 bg-cover bg-center rounded-l-2xl my-auto
